--- a/src/resources/views/user/partials/script.handlebars
+++ b/src/resources/views/user/partials/script.handlebars
@@ -1,3 +1,6 @@
 
+    <script src="/public/script/navbar.js"></script>
     <script src="/public/script/main.js"></script>
-        <script src="/public/script/background.js"></script>
+    <script src="/public/script/background.js"></script>
+    <script src="/public/script/ajax.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
