--- a/src/public/css/header.css
+++ b/src/public/css/header.css
@@ -67,6 +67,7 @@ body{
     width: 100%;
     height: 32px;
     margin: 9px 0px;
+    position: relative;
 }
 
 .container-seach__input > input{
@@ -76,6 +77,47 @@ body{
     outline: none;
     font-size: 16px;
     padding: 0px 10px;
+}
+
+.container-seach__input >.listfindcomic{
+    width: 100%;
+    height: 400px;
+    background-color: black;
+    position: absolute;
+    z-index: 9999;
+    top: 50px;
+    border: 1px solid red;
+    overflow-y: scroll;
+    display: none;
+}
+
+.findcomic--item{
+    display: flex;
+    height: 70px;
+    padding: 10px 20px;
+    border-bottom: 2px yellow dotted;
+}
+
+.findcomic--item >.findcomic--item__img{
+    width: 70px;
+}
+
+.findcomic--item >.findcomic--item__img >a >img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.findcomic--item >.findcomic--item__info{
+    flex: 1;
+    color: white;
+    padding-left: 20px;
+    overflow: hidden;
+}
+.findcomic--item__info >a{
+    color: yellow;
+    font-size: 20px;
 }
 
 .container-seach__input > i {
