--- a/src/resources/views/user/partials/header.handlebars
+++ b/src/resources/views/user/partials/header.handlebars
@@ -7,8 +7,21 @@
             </div>
             <div class="container-seach col l-5 m-5 c-0">
                <div class="container-seach__input">
-                    <input type="text" placeholder="Tìm truyện...">
+                    <input type="text" placeholder="Tìm truyện..." id="findcomic">
                     <i class="fa-solid fa-magnifying-glass"></i>
+                    <div class="listfindcomic" id="listfindcomic">
+                        <ul id="show--comicfind">
+                            <li class="findcomic--item">
+                                    <div class="findcomic--item__img">
+                                        <a href="/commic/"><img src="/public/image/comic/bluf.jpg" alt="top truyen"></a>
+                                    </div>
+                                    <div class="findcomic--item__info">
+                                        <a href="/commic/{{this.id}}">hảo hán pasdasdasas asdsadasd asdasdasdas asdasdasda asdasdasdasd ádasasđ asdasdasd asdasdas hương nào</a>
+                                        
+                                    </div>
+                            </li>
+                        </ul>
+                    </div>
                </div>
             </div>
             <div class="container-notification col l-2 m-2">
@@ -176,182 +189,106 @@
                         <span>THỂ LOẠI</span>
                         <i class="fa-solid fa-caret-down"></i>
                     </a>
-                    <ul class="drop-category grid wide">
-                        <div class="drop-category__list row no-gutters">
-                            <div class="drop-category__item col l-3 m-3">
-                                <ul>
-                                    <li class="item__red">
-                                        <a href="#" title="">Tất cả</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Action</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Adult</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Adventure</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Anime</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Chuyển Sinh</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Comedy</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Comic</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Cooking</a>
-                                    </li>
-                                    <li class="item__red">
-                                        <a href="#" title="">Cổ Đại</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Doujinshi</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Drama</a>
-                                    </li>
-                                    <li class="item__red">
-                                        <a href="#" title="">Đam Mỹ</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="drop-category__item col l-3 m-3">
-                                <ul>
-                                    <li>
-                                        <a href="#" title="">Ecchi</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Fantasy</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Gender Bender</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Harem</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Historical</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Horror</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Josei</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Live Action</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Manga</a>
-                                    </li>
-                                    <li class="item__red">
-                                        <a href="#" title="">Manhhua</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Manhwa</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Martial Arts</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Mature</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="drop-category__item col l-3 m-3">
-                                <ul>
-                                    <li>
-                                        <a href="#" title="">Mecha</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Mystery</a>
-                                    </li>
-                                    <li class="item__red">
-                                        <a href="#" title="">Ngôn Tình</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">One Shot</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Osychological</a>
-                                    </li>
-                                    <li class="item__red">
-                                        <a href="#" title="">Romance</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">School Life</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Sci-fi</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Seinen</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Shoujo</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Shoujo AI</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Shounen</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Shounen Ai</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="drop-category__item col l-3 m-3">
-                                <ul>
-                                    <li>
-                                        <a href="#" title="">Slice of Life</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Smut</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Soft Yaoi</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Soft Yuri</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Sports</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Supernatural</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Thiếu Nhi</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Tragedy</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Trinh Thám</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Truyện Scan</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Truyện Màu</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" title="">Webtoon</a>
-                                    </li>
-                                    <li class="item__red">
-                                        <a href="#" title="">Xuyên Không</a>
-                                    </li>
-                                </ul>
-                            </div>
+                    <div class="drop-category grid wide">
+                        <div class="drop-category__list">
+                            <div class="drop-category__item" >
+                                        <a href="">Manga</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Manhua</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Manhwa</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Action</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Adult</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Adventure</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Chuyển Sinh</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Comedy</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Cooking</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Cổ Đại</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Drama</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Đam Mỹ</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Bách Hợp</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Ecchi</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Fantasy</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Gender Bender</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Harem</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Horror</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Mecha</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Mystery</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Ngôn Tình</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">One Shot</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Psychological</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Romance</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">School Life</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Slice of Life</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Smut</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Sports</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Tragedy</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Trinh Thám</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Truyện Màu</a>
+                                    </div>
+                                    <div class="drop-category__item" >
+                                        <a href="">Xuyên Không</a>
+                                    </div>
                         </div>
-                    </ul>
+                    </div>
                 </li>
                 <li class="navbar-list__item ratings">
                     <a href="" class="setcolor">
