--- a/src/resources/views/commics/layouts/main.handlebars
+++ b/src/resources/views/commics/layouts/main.handlebars
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang truyện bla bla </title>  
     <link rel="icon" type="image/x-icon" href="../../../../public/image/logomtg.svg">  
+
     {{> style}}
 </head>
 <body>
     {{{body}}}
+    <script src="/public/script/background.js"></script>
+    <script src="/public/script/ajax.js"></script>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 </body>
 </html>
