--- a/src/resources/views/commics/partials/style.handlebars
+++ b/src/resources/views/commics/partials/style.handlebars
@@ -2,9 +2,10 @@
     <link rel="stylesheet" href="/public/css/grid.css">
     <link rel="stylesheet" href="/public/css/header.css">
     <link rel="stylesheet" href="/public/css/navbar.css">
+     <link rel="stylesheet" href="/public/css/seachcategory.css">
     <link rel="stylesheet" href="/public/css/footer.css">
-    <link rel="stylesheet" href="/public/css/login/login.css">
     <link rel="stylesheet" href="/public/css/comic.css">
+    <link rel="stylesheet" href="/public/css/main.css">
     <link rel="stylesheet" href="/public/css/chapter.css">
-
+    <link rel="stylesheet" href="/public/css/setting.css">
     <link rel="stylesheet" href="/public/css/responsive.css">
