--- a/src/resources/views/user/followcomic_Detail.handlebars
+++ b/src/resources/views/user/followcomic_Detail.handlebars
@@ -71,7 +71,7 @@
                                     <div class="followitem-comic col l-2">
                                         <img src="/public/image/comic/{{this.image}}" alt="">
                                     </div>
-                                    <div class="item-info__name l-7"><a href="/commic/{{this.id}}">{{this.name}}</a></div>
+                                    <div class="item-info__name l-7"><a href="/comic/{{this.id}}">{{this.name}}</a></div>
                                     <div class="followitem-info__status l-3">
                                       <p><a href="">máaaaaaaaaaaaaaaaaaaaaaaa</a></p>
                                       <p>chịu</p>
