--- a/src/resources/views/user/partials/header.handlebars
+++ b/src/resources/views/user/partials/header.handlebars
@@ -192,100 +192,100 @@
                     <div class="drop-category grid wide">
                         <div class="drop-category__list">
                             <div class="drop-category__item" >
-                                        <a href="">Manga</a>
+                                        <p onclick="seachcategory(1,1)">Manga</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Manhua</a>
+                                    <p onclick="seachcategory(2,1)">Manhua</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Manhwa</a>
+                                    <p onclick="seachcategory(3,1)">Manhwa</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Action</a>
+                                    <p onclick="seachcategory(4,1)">Action</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Adult</a>
+                                    <p onclick="seachcategory(5,1)">Adult</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Adventure</a>
+                                    <p onclick="seachcategory(6,1)">Adventure</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Chuyển Sinh</a>
+                                    <p onclick="seachcategory(7,1)">Chuyển Sinh</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Comedy</a>
+                                    <p onclick="seachcategory(8,1)">Comedy</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Cooking</a>
+                                    <p onclick="seachcategory(9,1)">Cooking</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Cổ Đại</a>
+                                    <p onclick="seachcategory(10,1)">Cổ Đại</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Drama</a>
+                                    <p onclick="seachcategory(11,1)">Drama</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Đam Mỹ</a>
+                                    <p onclick="seachcategory(12,1)">Đam Mỹ</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Bách Hợp</a>
+                                    <p onclick="seachcategory(13,1)">Bách Hợp</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Ecchi</a>
+                                    <p onclick="seachcategory(14,1)">Ecchi</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Fantasy</a>
+                                    <p onclick="seachcategory(15,1)">Fantasy</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Gender Bender</a>
+                                    <p onclick="seachcategory(16,1)">Gender Bender</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Harem</a>
+                                    <p onclick="seachcategory(17,1)">Harem</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Horror</a>
+                                    <p onclick="seachcategory(18,1)">Horror</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Mecha</a>
+                                    <p onclick="seachcategory(19,1)">Mecha</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Mystery</a>
+                                    <p onclick="seachcategory(20,1)">Mystery</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Ngôn Tình</a>
+                                    <p onclick="seachcategory(21,1)">Ngôn Tình</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">One Shot</a>
+                                    <p onclick="seachcategory(22,1)">One Shot</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Psychological</a>
+                                    <p onclick="seachcategory(23,1)">Psychological</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Romance</a>
+                                    <p onclick="seachcategory(24,1)">Romance</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">School Life</a>
+                                    <p onclick="seachcategory(25,1)">School Life</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Slice of Life</a>
+                                    <p onclick="seachcategory(26,1)">Slice of Life</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Smut</a>
+                                    <p onclick="seachcategory(27,1)">Smut</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Sports</a>
+                                    <p onclick="seachcategory(28,1)">Sports</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Tragedy</a>
+                                    <p onclick="seachcategory(29,1)">Tragedy</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Trinh Thám</a>
+                                    <p onclick="seachcategory(30,1)">Trinh Thám</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Truyện Màu</a>
+                                    <p onclick="seachcategory(31,1)">Truyện Màu</p>
                                     </div>
                                     <div class="drop-category__item" >
-                                        <a href="">Xuyên Không</a>
+                                    <p onclick="seachcategory(32,1)">Xuyên Không</p>
                                     </div>
                         </div>
                     </div>
@@ -373,6 +373,44 @@
         </div>
     </div>
 <div class="background" id="background" style="background-image: ;"></div>
+<div class="dashboad" id="dashboad">
+    <span>
+        <i class="fa-solid fa-angle-up"></i>
+        
+    </span>
+</div>
+<div class="setting" id="setting">
+    <span>
+       <i class="fa-solid fa-gear"></i>
+    </span>
+</div>
+<div class="showsetting" id="showsetting">
+    <div class="setting--header">
+        <h1>Cài Đặt</h1>
+        <div class="setting--header__exit" id="showsetting--exit">
+           <i class="fa-regular fa-circle-xmark"></i>
+        </div>
+    </div>
+    <div class="setting--container">
+        <div>
+            <h3>Chọn ảnh từ máy:</h3>
+            <i>Background:</i>
+            <input type="file" id="inputbackground">
+        </div>
+        <div>
+            <h3>Link :</h3>
+            <i>Background:</i>
+            <input type="text" id="inputbackground__link">
+            <button id="inputbackground__action">ok</button>
+        </div>
+        <div>
+            <h3>Độ mờ: (nhập 0 > 100)</h3>
+            <i>Background:</i>
+            <input type="text" id="inputbackground__opacity">
+            <button id="inputbackgroundopacity__action">ok</button>
+        </div>
+    </div>
+</div>
 <script>
     const cookies = document.cookie
     if (cookies) {
