--- a/src/resources/views/user/partials/style.handlebars
+++ b/src/resources/views/user/partials/style.handlebars
@@ -9,5 +9,6 @@
     <link rel="stylesheet" href="/public/css/User.css">
     <link rel="stylesheet" href="/public/css/comic.css">
     <link rel="stylesheet" href="/public/css/setting.css">
+    <link rel="stylesheet" href="/public/css/seachcategory.css">
 
     <link rel="stylesheet" href="/public/css/responsive.css">
