--- a/src/public/css/chapter.css
+++ b/src/public/css/chapter.css
@@ -22,7 +22,7 @@
     font-weight: bold;
 }
 
-.chapter--header__menu > a>i{
+.chapter--header__menu >i{
     width: 30px;
     height: 30px;
     line-height: 30px;
