--- a/src/public/css/navbar.css
+++ b/src/public/css/navbar.css
@@ -105,14 +105,16 @@
 }
 
 
-.drop-category__item > a{
+.drop-category__item > p{
     text-decoration: none;
-    line-height: 30px;
+    line-height: 20px;
     color: black;
-    padding: 20px;
+    cursor: pointer;
+    padding: 10px;
+    font-size: 20px;
 }
 
-.drop-category__item > a:hover{
+.drop-category__item > p:hover{
     color: red;
 }
 /* ---------------------------- -------------*/
